@@ -237,10 +237,11 @@ int lixa_xa_commit(client_status_t *cs, int *txrc, int one_phase_commit)
 
             /* bypass resource managers have not dynamically registered and
                statically ended the transaction */
-            if (csr->dynamic && csr->xa_s_state != XA_STATE_S2) {
+            if (csr->dynamic && csr->xa_s_state != XA_STATE_S2 &&
+                csr->xa_s_state != XA_STATE_S3) {
                 LIXA_TRACE(("lixa_xa_commit: resource manager # %i "
                             "has not yet dynamically registered and "
-                            "statically ended, skipping...\n",
+                            "statically ended/prepared, skipping...\n",
                             record.rmid));
                 continue;
             }
@@ -909,6 +910,15 @@ int lixa_xa_prepare(client_status_t *cs, int *txrc, int *commit)
             struct lixa_msg_body_prepare_8_xa_prepare_execs_s record;
             int tmp_txrc = TX_OK;
 
+            /* dynamic registered resource managers with unregistered state
+               must be bypassed */
+            if (csr->dynamic && csr->xa_s_state != XA_STATE_S2) {
+                LIXA_TRACE(("lixa_xa_prepare: resource manager # %u has not "
+                            "dynamically registered & ended its "
+                            "partecipation, skipping...\n", i));
+                continue;
+            }
+            
             record.rmid = i;
             record.flags = TMNOFLAGS;
             record.rc = act_rsrmgr->xa_switch->xa_prepare_entry(
@@ -1103,10 +1113,11 @@ int lixa_xa_rollback(client_status_t *cs, int *txrc, int tx_commit)
             
             /* bypass resource managers have not dynamically registered and
                statically ended the transaction */
-            if (csr->dynamic && csr->xa_s_state != XA_STATE_S2) {
-                LIXA_TRACE(("lixa_xa_commit: resource manager # %i "
+            if (csr->dynamic && csr->xa_s_state != XA_STATE_S2 &&
+                csr->xa_s_state != XA_STATE_S3) {
+                LIXA_TRACE(("lixa_xa_rollback: resource manager # %i "
                             "has not yet dynamically registered and "
-                            "statically ended, skipping...\n",
+                            "statically ended/prepared, skipping...\n",
                             record.rmid));
                 continue;
             }
